<resources>
    <string name="app_name">LMSVVIT</string>
    <string name="slide_1_title">Hello !</string>
    <string name="slide_1_desc">The easiest way to Apply for a Leave!</string>
    <string name="slide_2_title">LMSVVIT</string>
    <string name="slide_2_desc">Track your leaves</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="btn_login">LOGIN</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="leaves_available">No. of Casual Leaves Available : </string>
    <string name="sick_available">No. of Sick Leaves Available : </string>
    <string name="sick_used">No. of Sick Leaves Used : </string>
    <string name="leaves_used">No. of Leaves Used : </string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="personal_information">Personal Information</string>
    <string name="leaves_applied">Leaves Applied</string>
    <string name="leaves_summary">Leaves Summary</string>
    <string name="leave_applications">Applicants</string>
    <string name="reason_for_leave">Reason for Leave</string>
    <string name="status_of_leave">Status of Leave :</string>
    <string name="applied_dates">Applied Dates :</string>
    <string name="no_of_days_applied">No.of Days Applied</string>
    <string name="leave_applied_on">Leave Applied on :</string>
    <string name="status">status</string>
    <string name="applicant_name">Applicant Name:</string>
    <string name="home_footer">ca-app-pub-3940256099942544/6300978111</string>
    <string name="welcome">Welcome ,</string>
    <string name="no_internet">No Internet, Check Network Connection</string>
    <string name="invalid_auth">Invalid Username/Password</string>
    <string name="casual_leaves">Casual Leaves</string>
    <string name="sick_leaves">Sick Leaves</string>
    <string name="fetching_data">Fetching Data....</string>
    <string name="notify_frag">notificationFragment</string>
    <string name="fragment">fragment</string>
    <string name="employee">employee</string>
    <string name="cl_balance">Casual Leaves in Balance :</string>
    <string name="cl_used">Casual Leaves Availed :</string>
    <string name="sl_balance">Sick Leaves in Balance :</string>
    <string name="sl_used">Sick Leaves Availed :</string>
    <string name="female">Female</string>
    <string name="ml_balance">Maternity Leaves in Balance :</string>
    <string name="ml_used">Maternity Leaves Availed :</string>
    <string name="hod">HoD</string>
    <string name="no_leaves_applied">No Leaves Applied or in Pending</string>
    <string name="leave_applied">Leave Applied on</string>
    <string name="ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="enter_leaves">Please Enter number of leaves required</string>
    <string name="select_date">Select Dates</string>
    <string name="ok">OK</string>
    <string name="error">Error: Selected must not exceed Required leaves</string>
    <string name="cancelled">Cancelled</string>
    <string name="maternity_leaves">Maternity Leaves</string>
    <string name="college_logo">College Logo</string>
    <string name="login_logo">Login Logo</string>
    <string name="no_of_leaves_in_balance">No.of leaves in Balance</string>
    <string name="no_of_days_leave_required">No. of Days leave required</string>
    <string name="select_dates">Select Dates</string>
    <string name="type_reason_for_leave">Type Reason for Leave</string>
   <string name="apply">Apply</string>
    <string name="username">Username</string>
    <string name="department">Department</string>
    <string name="designation">Designation</string>
    <string name="emailid">emailId</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="save">Save</string>
    <string name="leave_status">Leave Status</string>
    <string name="enter_password">Enter Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="applied_leave_for">Applied leave for </string>
    <string name="select_dates_pleas">Please Select Dates</string>
    <string name="a_day_least">Select a day atleast</string>
    <string name="fileds_empty">Fields cannot be empty</string>
    <string name="password_retype">Retype password should be same as password</string>
    <string name="type_password">Please type emailId/Password</string>
    <string name="no_faculty_applied">No Faculty Applied for Leaves</string>
    <string name="faculty_applied">No Faculty Applied for Leaves</string>
    <string name="no_leave_approved">No Leaves Approved/Applied or Rejected</string>
    <string name="select_days">Select %s days</string>
    <string name="strings_append">%s %s</string>
    <string name="name">name</string>
    <string name="result">result</string>
    <string name="my_pref">My_Pref</string>
    <string name="email">email</string>
    <string name="leaves_staff_balance">List of Staff with Balance Leaves:</string>
    <string name="notfyFrag">notificationFragment</string>
    <string name="notification">Notification</string>
    <string name="description">Description</string>
    <string name="leavesFrag">LeavesFragment</string>
    <string name="apply_frag">ApplyFragment</string>
    <string name="home_frag">HomeFragment</string>
    <string name="personal_frag">PersonalFragment</string>
    <string name="applicants_frag">ApplicantsFragment</string>
    <string name="summary_frag">SummaryFragment</string>
    <string name="update">Update</string>
    <string name="password">password</string>
    <string name="cancel">Cancel</string>
    <string name="string_append_hypen">%s - %s</string>
    <string name="approve">APPROVE</string>
    <string name="reject">REJECT</string>
    <string name="some_string"><![CDATA[&#8226;]]></string>
    <string name="select">Select</string>
    <string name="days">days</string>

</resources>
